--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "cross-fetch": "^3.0.4",
+    "eslint-utils": "^1.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
